@@ -1,30 +1,54 @@
 ## Kotlin
 
-### Videos
+- Kotlin Compiler Options
+
+  ```bash
+  $ kotlinc -X 2>&1 | grep -i release
+  ```
+
+- Native Image
+
+  ```bash
+  $ sdk u java graalvm-ce-dev
+  $ cat > App.kt << EOF
+  fun main() {
+    println("Hello Kotlin!")
+  }
+  EOF
+
+  # $ kotlinc -version \
+  #           -verbose \
+  #           -include-runtime \
+  #           -java-parameters \
+  #           -jvm-target 18 \
+  #           -Xjdk-release=18 \
+  #           -api-version 1.8 \
+  #           -language-version 1.8 \
+  #           -Werror \
+  #           -progressive \
+  #           App.kt -d app.jar
+
+  $ kotlinc -version -include-runtime App.kt -d app.jar
+  $ java -showversion -jar app.jar
+  $ native-image \
+        --no-fallback \
+        --native-image-info \
+        --enable-preview \
+        -jar app.jar
+
+  $ chmod +x app
+  $ time ./app
+
+  # Static image info
+  $ file app
+  $ otool -L app
+  $ objdump -section-headers  app
+
+  # Find GraalVM used to generate the image
+  $ strings -a app | grep -i com.oracle.svm.core.VM
+
+
+
+  # Videos
 
 * https://www.youtube.com/watch?v=SEKsvHYZz8s (crypto 101)
-
-* https://www.youtube.com/watch?v=yJrJEvvW_HA (SSL/TLS)
-
-* https://www.youtube.com/watch?v=tjOrSH6db9E (Maven)
-
-* https://www.youtube.com/watch?v=wgJWs14YcEs (An Introduction to JVM Performance • Rafael
-  Winterhalter)
-
-* https://www.youtube.com/watch?v=kR2sm1zelI4&t=1522s (Circuit Breakers)
-
-* https://www.youtube.com/watch?v=DEOqLTxkK8A&feature=emb_title (What I Wish I Knew About Maven
-  Years Ago)
-
-* https://www.youtube.com/watch?v=tfZ6x0rYD6Y (Surviving Dependency Hell)
-
-* StampedLock - https://www.youtube.com/watch?v=QER63oNLpAE
-
-* Phaser - https://www.youtube.com/watch?v=Xro4KwoMNJ8
-
-* Whats new in java security - https://www.youtube.com/watch?v=dNoxScux2j0
-
-  https://www.packtpub.com/application-development/hands-cryptography-java-video
-
-  LJC Talk - https://www.youtube.com/watch?v=Ll_NK0SZy6Q&t=2148s (Continuous Deployment of JVM
-  applications)
